@@ -135,3 +135,4 @@ T_285h264_misdetected_as_mp3:69ae2a6361c8ed76cfdaffa4f6174cba:passed:20101031-10
 T_286vp8_in_ogg:858944f0b5080149e89f6d845f752e49:passed:20101222-113225:1.052177834
 T_287mkvextract_exit_codes:2-2-2-2-2-2:passed:20101222-120655:0.099966851
 T_288identify_files_by_amg:26ab0db90d72e28ad0ba1e22ee510510:passed:20110308-151817:0.026221677
+T_289wav_unsupported_formattag:3:passed:20110314-133958:0.020701503
